force-app/main/default/objects/Station__c/Station__c.object-meta.xml
<CustomObject>
    <label>Store</label>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>