force-app/main/default/objects/Station__c/fields/Station_Number__c.field-meta.xml
<CustomField>
    <fullName>Station_Number__c</fullName>
    <displayFormat>SN-{000}</displayFormat>
    <label>Store Number</label>
    <type>AutoNumber</type>
</CustomField>