force-app/main/default/objects/Station__c/validationRules/Name_Is_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Is_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Store name is empty</errorMessage>
</ValidationRule>