force-app/main/default/objects/Station__c/validationRules/Station_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Station_Name</fullName>
    <active>true</active>
    <description>Station Name should be Unique .</description>
    <errorConditionFormula>AND(
  CONTAINS(
      VLOOKUP( 
        $ObjectType.Station__c.Fields.Name , 
        $ObjectType.Station__c.Fields.Name, Name
      ), 
      Name
    ), 
  OR(
      ISNEW(), ISCHANGED(Name)
    ) 
  )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Station Name should be Unique .</errorMessage>
</ValidationRule>